--- a/задание 4/tex/main.tex
+++ b/задание 4/tex/main.tex
@@ -52,7 +52,63 @@ $.
 \\
 $g(x) = \displaystyle\frac{17}{19}x - \frac{1}{15}$.
 
-\textbf{Аналитическое решение.}
+\textbf{Решение Часть 1.}
+
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{f(x)plot_k15.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{f(x)plot_k16.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{f(x)plot_k17.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{f(x)plot_k18.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{f(x)plot_k19.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{f(x)plot_k20.png}
+\end{figure}
+
+
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{plot_k15.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{plot_k16.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{plot_k17.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{plot_k18.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{plot_k19.png}
+\end{figure}
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=13cm]{plot_k20.png}
+\end{figure}
+
+\textbf{Решение Часть 2.}
+
 
 
 
