--- a/задание 4/tex/main.tex
+++ b/задание 4/tex/main.tex
@@ -53,7 +53,7 @@ $.
 $g(x) = \displaystyle\frac{17}{19}x - \frac{1}{15}$.
 
 \textbf{Решение Часть 1.}
-
+Графиком функции $f(x) = 18 + x -7x^2$ будет всюду плотное подмножество единичного квадрата (мера Лебега этого подмножества будет равна площади единичного квадрата). Иными словами, график функции $f$ суть вся поверхность тора $\mathbb{T}^2$. Проекции с точностью до $k=15,16,\dots,20$ разрядов на рисунках 1 --- 6.
 
 \begin{figure}[!ht]
 	\centering
@@ -80,7 +80,7 @@ $g(x) = \displaystyle\frac{17}{19}x - \frac{1}{15}$.
 	\includegraphics[width=13cm]{f(x)plot_k20.png}
 \end{figure}
 
-
+График функции $h(x)$ также есть множество Лебеговой меры 1. Проекции с точностью до $k=15,16,\dots,20$ разрядов на рисунках 7 --- 12.
 
 \begin{figure}[!ht]
 	\centering
@@ -109,21 +109,55 @@ $g(x) = \displaystyle\frac{17}{19}x - \frac{1}{15}$.
 
 \textbf{Решение Часть 2.}
 
+\textbf{Теорема.} \textit{
+	График линейной p-адической функции $f(x) = cx + q$, где $c,q \in \mathbb{Z}_p \cap \mathbb{Q}$, $c=\dfrac{r}{s}$, $q=\dfrac{r'}{s'}$, $r,r'\in\mathbb{Z}$, $s,s'\in\mathbb{N}$, и при этом НОД(r,s) = НОД(r',s') = НОД(s, p) = НОД(s', p) = 1, представляет собой зацепление торических узлов и каждый торических узел является обмоткой тора (образом прямой единичного квадрата на поверхность тора):
+	\[
+	z_i = \{ (y \mod 1, (cy+e) \mod 1) : y \in \mathbb{R}, e \in C(q) \},
+	\]
+}
+	где $i = 0,1,2,\dots,\text{mult}_m p-1, m = \dfrac{s'}{\text{НОД}(s, s')}$,\\ $ C(q)=\left\{
+\bigl(-p^{\ell}\cdot \tfrac{r'}{s'}\bigr)\bmod 1
+:\;
+\ell=0,1,2,\ldots,\mathrm{mult}_m p - 1
+\right\}.$
 
+Количество обмоток тора равно $\mathrm{mult}_m p$,  где $m = \dfrac{s'}{\text{НОД}(s, s')}$.
 
+Для функции \[
+g(x) = \displaystyle\frac{17}{19}x - \frac{1}{15}
+\]
+$m = \dfrac{15}{\text{НОД}(15, 19)} = 15$, $\mathrm{mult}_{15} 2 = 4$.
 
-\textbf{Ответ:} .
+\[
+z_0  = \{ (y \bmod 1, (\frac{17}{19}y + \frac{1}{15}) \bmod 1) : y \in \mathbb{R} \}
+\]
+\[
+z_0  = \{ (y \bmod 1, (\frac{17}{19}y + \frac{2}{15}) \bmod 1) : y \in \mathbb{R} \}
+\]
+\[
+z_0  = \{ (y \bmod 1, (\frac{17}{19}y + \frac{4}{15}) \bmod 1) : y \in \mathbb{R} \}
+\]
+\[
+z_0  = \{ (y \bmod 1, (\frac{17}{19}y + \frac{8}{15}) \bmod 1) : y \in \mathbb{R} \}
+\]
+
 
 \textbf{Программная реализация на Python.}
 
-Исходный код представлен в файле 4.py. Результаты его работы представлены на рисунках 1.
+НОД вычисляем по алгоритму Евклида. На правом рисунке семейство параллельных прямых строится следующим образом: $i$-ая прямая получается из базового отрезк, на котором определяется $z_i$, сдвигом по оси $x$ на величину shift$ \in \{0,1,\dots,s-1\}$. На левом рисунке shift = 0. Для каждой обмотки изображены лишь те отрезки, которые целиком лежат в единичном квадрате.
 
+Исходный код для $f$ и $h$ представлен в файле 4.py. Результаты его работы представлены на рисунках 1 --- 12.
+
+Исходный код для $g$ представлен в файле 4-2.py. Результат его работы представлен на рисунке 13.
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=17cm]{g_from_belyaev_-1_15.png}
+\end{figure}
 
 \begin{Verbatim}[numbers=left]
 
-
 \end{Verbatim}
-
 
 %  \bibitem{Ione} GraphOnLine : [интерактивный онлайн-конструктор графов]. – URL: https://graphonline.ru/?graph=WnqNelghOjfEvOqsZZcst (дата обращения: 20.09.2025).
 %  \label{сайт1}
